[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wave-kv"
version = "0.2.0"
description = "Drop-in wave-encoded KV cache for any transformer. Fixed O(1) memory regardless of sequence length."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Christian Knopp", email = "chris@zynerji.com"},
]
keywords = ["kv-cache", "transformer", "llm", "inference", "memory", "compression", "attention"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Zynerji/waveKV"
Repository = "https://github.com/Zynerji/waveKV"

[tool.setuptools.packages.find]
include = ["wave_kv*"]
